			CHANGELOG for KAME kit

$Id: CHANGELOG,v 1.938 2000/05/25 16:40:20 itojun Exp $

<200005>
Fri May 26 00:02:15 JST 2000  itojun@iijlab.net
	* netbsd/usr.bin/ftp/fetch.c: do not transmit scope identifier
	  on HTTP Host: directive.  disallow scoped address if the access is
	  via proxy.
	* openbsd/usr.bin/ftp/fetch.c: do not transmit scope identifier on
	  HTTP Host: directive.  correct Host: directive passing if the
	  access is via proxy.
	  TODO: disallow scoped address if the access is via proxy.

Thu May 25 23:16:01 JST 2000  itojun@iijlab.net
	* bsdi4/usr.bin/telnet/commands.c: use getaddrinfo to be scoped-address
	  friendly.

Thu May 25 21:56:47 JST 2000  itojun@iijlab.net
	* bsdi4/sys/i386/pci/if_exp.c: do not use interrupt for initializing
	  multicast filter.  this will make exp driver to be friendly with
	  IPv6 initialization sequence.  hints from netbsd fxp driver.

2000-05-25  JINMEI, Tatuya  <jinmei@isl.rdc.toshiba.co.jp>
	* bsdi4/sys/net/route.c (ifa_ifwithroute): reverted a KAME
	specific change introduced on 2000-02-25 (see this log file).
	The change was an ad-hoc hack and broke BSDI's original
	intention, so we've wanted to clarify the code.

2000-05-25  JINMEI, Tatuya  <jinmei@isl.rdc.toshiba.co.jp>
	* kame/sys/netinet6/in6_ifattach.c (in6_ifattach,
	in6_ifattach_addaddr): use rtrequest1() when assigning IPv6
	addresses since this function is more conscious of interfaces than
	rtrequest() and is suitable for link-local addresses.

Thu May 25 01:25:39 JST 2000 sakane@ydc.co.jp
	* kame/sys/{netkey/key.c,netinet6/ipsec.c}:
	* kame/kame/setkey:
	supported IPsec with link local address.
	XXX to be supported by racoon.

Wed May 24 22:42:40 JST 2000  itojun@iijab.net
	* bsdi4/sys/net/if_ppp.c: IPv6 support.  highly experimental.
	* bsdi4/usr.bin/ppp: IPv6CP support.  highly experimental.  solicit
	  test/experience reports.

2000-05-24  JINMEI, Tatuya  <jinmei@isl.rdc.toshiba.co.jp>
	* kame/kame/dhcp6/dhcp6s.c: the "-n dnsserv" option can now be